--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name=keywords content="Android, Figma, User interface, user experience"/> 
         <meta name=author content="Pamela Chemutai"/> 
         <link rel="shortcut icon" type=image/svg href=../media/logo.svg /> 
-        <title>Kem Kem | Android Developer and UI/UX Developer</title> 
+        <title>Chemutai Selim | Android Developer and UI/UX Developer</title> 
         <link href="main.css" rel="stylesheet">
     </head> 
     <body data-spy=scroll data-target=.navbar data-offset=200> 
